--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "src/index.js",
   "scripts": {
     "dev:build": "tsc -w",
-    "dev:start": "nodemon ./build/index.js",
-    "dev": "cross-env NODE_ENV=dev tsc && concurrently npm:dev:*"
+    "dev:start": "cross-env NODE_ENV=dev nodemon ./build/index.js",
+    "dev": "tsc && concurrently npm:dev:*"
   },
   "keywords": [],
   "author": "nolan",
@@ -15,14 +15,12 @@
     "concurrently": "^7.3.0",
     "connect-redis": "^6.1.3",
     "cookie-parser": "^1.4.6",
-    "cross-env": "^7.0.3",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
-    "http-errors": "^2.0.0",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.19",
-    "redis": "^3.1.2",
+    "redis": "^2.8.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4",
     "xss": "^1.0.13"
@@ -34,6 +32,7 @@
     "@types/express-session": "^1.17.5",
     "@types/http-errors": "^1.8.2",
     "@types/morgan": "^1.9.3",
-    "@types/mysql": "^2.15.21"
+    "@types/mysql": "^2.15.21",
+    "cross-env": "^7.0.3"
   }
 }
